generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgres"
  url      = env("DATABASE_URL")
}

enum Profession {
  Mechanic
}

enum Education {
  Primary
  Secondary
  University
  Master
  PhD
}

enum JobState {
  Busy
  Free
  Pending
}

model User {
  id          String   @id @default(cuid())
  email       String   @unique
  password    String
  firstname   String
  lastname    String
  phone       BigInt   @unique
  profile_pic String?
  jobs        Job[]
  createdAt   DateTime @default(now())
}

model Professional {
  id         String      @id @default(cuid())
  firstname  String
  lastname   String
  email      String      @unique
  phone      String      @unique
  password   String
  profession Profession?
  education  Education?
  experience Int         @default(0)
  jobs       Job[]
  latitude   Float?
  longitude  Float?
  state      JobState?
  createdAt  DateTime    @default(now())
}

model Job {
  id             String        @id @default(cuid())
  title          String
  description    String
  photo          String?
  user           User          @relation(fields: [userId], references: [id])
  userId         String
  professional   Professional? @relation(fields: [professionalId], references: [id])
  professionalId String?
  latitude       Float
  longitude      Float
  resolved       Boolean       @default(false)
  createdAt      DateTime      @default(now())
}
